GUI: add common filemenu to filemanager

--- a/src/main/java/axoloti/dialogs/FileManagerFrame.form
+++ b/src/main/java/axoloti/dialogs/FileManagerFrame.form
@@ -4,7 +4,7 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="jMenu1">
+        <Menu class="axoloti.menus.FileMenu" name="fileMenu1">
           <Properties>
             <Property name="text" type="java.lang.String" value="File"/>
           </Properties>
